--- a/r5dev/game/CMakeLists.txt
+++ b/r5dev/game/CMakeLists.txt
@@ -19,6 +19,7 @@ add_sources( SOURCE_GROUP "Shared"
     "shared/shared_classnames.h"
     "shared/shareddefs.h"
     "shared/takedamageinfo.h"
+    "shared/usercmd.cpp"
     "shared/usercmd.h"
     "shared/util_shared.cpp"
     "shared/util_shared.h"
