UserCmd: limit command backlog to prevent exploitation
Implement UserCmd command backlog limiting (the new convar 'sv_maxUserCmdProcessTicks' dictates how many ticks can be processed per second). Defaulted to 10, which is (default tick interval (0.05) * default cvar val (10) = 0.5ms window), which is equal to the default of cvar 'sv_maxunlag'.

Before this patch, you could stuff several seconds worth of usercmd's in one second and achieve speed hacking.

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -73,6 +73,8 @@ add_sources( SOURCE_GROUP "Network"
 add_sources( SOURCE_GROUP "Player"
     "server/player.cpp"
     "server/player.h"
+    "server/player_command.cpp"
+    "server/player_command.h"
     "server/playerlocaldata.h"
 )
 
